--- a/Worksheets/01_Working_with_data.ipynb
+++ b/Worksheets/01_Working_with_data.ipynb
@@ -231,19 +231,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T6WtdKMiCGh-"
+        "id": "T6WtdKMiCGh-",
+        "outputId": "c188d52a-0c57-4f45-dcfb-b377ec54e625",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "def calculate_total():\n",
         "  # add your code below here\n",
+        "  num1 = float(28.5)\n",
+        "  num2 = float(32.67)\n",
+        "  total = num1 + num2\n",
+        "  print(total)\n",
+        "calculate_total()\n",
+        "\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "calculate_total()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "61.17\n",
+            "61.17\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
