--- a/Worksheets/01_Working_with_data.ipynb
+++ b/Worksheets/01_Working_with_data.ipynb
@@ -252,7 +252,7 @@
         "\n",
         "calculate_total()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,17 +301,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EmO5dR9nCYpE"
+        "id": "EmO5dR9nCYpE",
+        "outputId": "f32db0fc-ae04-426f-bc1b-1386db219515",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "def show_message():\n",
         "   # add your code below here\n",
-        "\n",
-        "\n",
+        "   name =\"Billy\"\n",
+        "   age = \"18\"\n",
+        "   message = \"Hello \" + name + \" you are \" + age + \" years old.\"\n",
+        "   print(message)\n",
         "show_message()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Billy you are 18 years old.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
