--- a/Worksheets/01_Working_with_data.ipynb
+++ b/Worksheets/01_Working_with_data.ipynb
@@ -316,7 +316,7 @@
         "   print(message)\n",
         "show_message()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,15 +392,31 @@
       "source": [
         "def add_five():\n",
         "  # add your code, indented, below here\n",
-        "\n",
+        "  num = int(input(\"please enter a whole number: \"))\n",
+        "  num_plus_five=num+5\n",
+        "  print(num_plus_five\n",
+        "        )\n",
         "\n",
         "add_five()"
       ],
       "metadata": {
-        "id": "-oThcTPtnAtS"
+        "id": "-oThcTPtnAtS",
+        "outputId": "6e3a1322-4b57-46c7-c6ff-03448b8981f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter a whole number: 4\n",
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
