--- a/Worksheets/01_Working_with_data.ipynb
+++ b/Worksheets/01_Working_with_data.ipynb
@@ -406,7 +406,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,6 +455,8 @@
       "source": [
         "def calculate_float_total():\n",
         "  # add your code, indented, below here\n",
+        "  num1 = float(input(\"please enter a decimal number:\"))\n",
+        "  num2\n",
         "\n",
         "\n",
         "\n",
