--- a/Worksheets/01_Working_with_data.ipynb
+++ b/Worksheets/01_Working_with_data.ipynb
@@ -456,17 +456,34 @@
         "def calculate_float_total():\n",
         "  # add your code, indented, below here\n",
         "  num1 = float(input(\"please enter a decimal number:\"))\n",
-        "  num2\n",
+        "  num2 = float(input(\"please enter a decimal number:\"))\n",
+        "  total =num1 + num2\n",
+        "  print(total)\n",
+        "\n",
         "\n",
         "\n",
         "\n",
         "calculate_float_total()"
       ],
       "metadata": {
-        "id": "O65Io7C1n4u6"
+        "id": "O65Io7C1n4u6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2b054b9a-5700-4d46-d8ef-df328a6c5724"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter a decimal number:3.8\n",
+            "please enter a decimal number:5.2\n",
+            "9.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
